--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -27,6 +27,7 @@ $bg-colour-4: #434057;
 $bg-colour-5: #f4f5f7;
 $bg-colour-6: #f8f9fa;
 $bg-overlay-colour: rgba(20,16,52,.69);
+$bg-overlay-colour-darker: #1f1b36;
 $footer_bg-colour: #2d2e35;
 
 $font-dark-colour: #2e2d36;
