--- a/src/assets/scss/_houseDetails.scss
+++ b/src/assets/scss/_houseDetails.scss
@@ -110,6 +110,9 @@
 }
 
 // Property header section
+.house-details-header-mobile {
+  display: none;
+}
 .property-header-container {
   padding-bottom: $large-section-spacing;
 }
@@ -616,7 +619,97 @@
 }
 
 @media (max-width: 767.98px) {
+  // Page  Header mobile
+  .house-details-header-mobile {
+    display: block;
+    position: relative;
+    height: 300px;
+    width: 100%;
+  }
+  .property-img-mobile {
+    position: absolute;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+
+  .house-price {
+    cursor: pointer;
+    position: absolute;
+    padding: 3px 16px;
+    border-radius: 20px;
+    background-color: $light-yellow;
+    top: 70px;
+    left: 20px;
+    color: white;
+    z-index: 2;
+    .price-text {
+      font-weight: $font-weight;
+      line-height: $small-line-height;
+    }
+  }
+  .left-arrow {
+    position: absolute;
+    z-index: 2;
+    color: white;
+    top: 150px;
+    left: 20px;
+  }
+  .right-arrow {
+    position: absolute;
+    z-index: 2;
+    color: white;
+    top: 150px;
+    right: 20px;
+    transform: rotate(180deg);
+  }
+
+  .mobile-header-footer {
+    display: flex;
+    align-items: center;
+    z-index: 3;
+    position: absolute;
+    bottom: 15px;
+    left: 20px;
+
+    .property-utility {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-right: 10px;
+
+      span {
+        display: block;
+        text-align: center;
+        color: white;
+      }
+
+      .value {
+        margin-top: 0;
+        padding-right: 7px;
+        font-weight: normal;
+        font-size: $smallest-font-size;
+        line-height: $smallest-line-height;
+      }
+
+      .icon-wrapper {
+        margin-right: 5px;
+      }
+
+      .name {
+        font-size: $smallest-font-size;
+        line-height: $smallest-line-height;
+      }
+    }
+  }
+
+  // Other responsive configs
   .property-description-section {
+    padding-top: $small-section-spacing;
     padding-bottom: $small-section-spacing;
   }
 
